--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
+    "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "regression": "^2.0.1",
     "resolve": "1.10.0",
