--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
+    "react-draggable": "^4.1.0",
+    "react-virtualized": "^9.21.2",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "regression": "^2.0.1",
