--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
+    "katex": "^0.11.1",
     "mini-css-extract-plugin": "0.5.0",
+    "nerdamer": "^1.1.2",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
