create react components for regression analysis

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,9 +4,16 @@
   "author": "Aaron Black",
   "version": "1.0.1",
   "description": "Replace new tab screen with GitHub trending projects.",
+  "browser_action": {
+    "default_popup": "index.html",
+    "default_title": "Data Table"
+  },
   "chrome_url_overrides": {
     "newtab": "index.html"
   },
   "content_security_policy": "script-src 'self' 'sha256-5As4+3YpY62+l38PsxCEkjB1R4YtyktBtRScTJ3fyLU='; object-src 'self'",
-  "permissions": ["storage", "tabs"]
+  "permissions": [
+    "storage",
+    "tabs"
+  ]
 }
