--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-draggable": "^4.1.0",
     "react-virtualized": "^9.21.2",
     "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
